--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -1,73 +1,43 @@
-name: Container Security
+name: container-scan-and-push
 
 on:
   push:
-    branches: [ main, feature/github-container-security ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
-env:
-  IMAGE_NAME: course-management
-  REGISTRY: ghcr.io/${{ github.repository_owner }}
+permissions:
+  contents: read
+  packages: write
 
 jobs:
-  build-and-scan:
+  build_scan_push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '21'
+      - name: Set image name
+        run: echo "IMAGE=ghcr.io/${{ github.repository_owner }}/practica:${{ github.sha }}" >> $GITHUB_ENV
 
-      - name: Build JAR
-        run: mvn -q clean package
-
-      - name: Log in to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+      - name: Build image (local)
+        run: docker build -t $IMAGE .
 
-      - name: Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@master
+      - name: Trivy scan (fail on HIGH/CRITICAL)
+        uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          format: 'table'
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
-          ignore-unfixed: true
-          exit-code: '1'   # если найдены уязвимости — job упадёт
+          image-ref: ${{ env.IMAGE }}
+          format: table
+          exit-code: '1'
+          ignore-unfixed: false
+          vuln-type: os,library
+          severity: CRITICAL,HIGH,MEDIUM
 
-  push-image:
-    needs: build-and-scan
-    runs-on: ubuntu-latest
-
-    if: success()  # публикуем образ ТОЛЬКО если сканирование прошло
-
-    steps:
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Pull image from previous job and push with tag
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          FINAL_TAG=latest
-          docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-          docker tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG $REGISTRY/$IMAGE_NAME:$FINAL_TAG
-          docker push $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-          docker push $REGISTRY/$IMAGE_NAME:$FINAL_TAG
+      - name: Push image to GHCR (only if scan passed)
+        run: docker push $IMAGE
