--- a/.github/workflows/container-scan-and-push.yml
+++ b/.github/workflows/container-scan-and-push.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set image name
-        run: echo "IMAGE=ghcr.io/${{ github.repository_owner }}/practica:${{ github.sha }}" >> $GITHUB_ENV
+        run: echo "IMAGE=ghcr.io/${{ github.repository_owner }}/course-management:${{ github.sha }}" >> $GITHUB_ENV
 
       - name: Login to GHCR
         uses: docker/login-action@v3
