--- a/.github/workflows/container-scan-and-push.yml
+++ b/.github/workflows/container-scan-and-push.yml
@@ -30,6 +30,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+
+
       - name: Build application JAR
         run: mvn -q clean package
 
